fix(payment-tests): resolve NPEs, add missing import, stabilize mocks & Stripe tests